# spirv-struct-layout

./: Cargo.toml  README.md
examples/simple/: main.rs  simple.frag
spirv_struct_layout/: Cargo.toml
spirv_struct_layout/examples/simple/: main.rs  simple.frag  simple.frag.spv
spirv_struct_layout/src/: lib.rs
spirv_struct_layout_derive/: Cargo.toml
spirv_struct_layout_derive/src/: lib.rs
src/: lib.rs
