[package]
name = "spirv-struct-layout"
version = "0.1.2"
authors = ["Tristam MacDonald <tristam@trist.am>"]
license = "Apache-2.0"
description = "Check that the layout of a rust struct matches the layout of a given type in SPIRV"
edition = "2018"

repository = "https://github.com/swiftcoder/spirv-struct-layout"
documentation = "https://docs.rs/spirv-struct-layout"
readme = "../README.md"

[dependencies]
spirv-struct-layout-derive = { version = "0.1", path = "../spirv_struct_layout_derive" }
spirq = "0.2"
