[package]
name = "spirv-struct-layout-derive"
version = "0.1.3"
authors = ["Tristam MacDonald <tristam@trist.am>"]
license = "Apache-2.0"
description = "This crate is just an implementation detail of the spirv-struct-layout crate"
edition = "2018"

repository = "https://github.com/swiftcoder/spirv-struct-layout"
documentation = "https://docs.rs/spirv-struct-layout-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
spirq = "0.2"
