[package]
authors = ["Tristam MacDonald <tristam@trist.am>"]
description = "This crate is just an implementation detail of the spirv-struct-layout crate"
edition = "2018"
license = "Apache-2.0"
name = "spirv-struct-layout-derive"
version = "0.1.4"

documentation = "https://docs.rs/spirv-struct-layout-derive"
repository = "https://github.com/swiftcoder/spirv-struct-layout"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
spirq = "0.4"
syn = "1.0"
